[gd_scene load_steps=32 format=2]

[ext_resource path="res://ArenaAero/AeroMinigame/backgroundMarkedNS.png" type="Texture" id=1]
[ext_resource path="res://ArenaAero/AeroMinigame/Center.tscn" type="PackedScene" id=2]
[ext_resource path="res://ArenaAero/AeroMinigame/MinigameAero.gd" type="Script" id=3]
[ext_resource path="res://ArenaAero/AeroMinigame/Wing.tscn" type="PackedScene" id=4]
[ext_resource path="res://ArenaAero/AeroMinigame/Center_Mass.tscn" type="PackedScene" id=5]
[ext_resource path="res://ArenaAero/AeroMinigame/Center_Lift.tscn" type="PackedScene" id=6]
[ext_resource path="res://ArenaAero/AeroMinigame/lightsWhite.png" type="Texture" id=7]
[ext_resource path="res://ArenaAero/AeroMinigame/lightsRed.png" type="Texture" id=8]
[ext_resource path="res://ArenaAero/AeroMinigame/lightsGreen.png" type="Texture" id=9]
[ext_resource path="res://ArenaAero/AeroMinigame/buttonTest.png" type="Texture" id=10]
[ext_resource path="res://ArenaAero/AeroMinigame/windGenerator.png" type="Texture" id=11]
[ext_resource path="res://ArenaAero/AeroMinigame/Smoke_Dispenser.tscn" type="PackedScene" id=12]
[ext_resource path="res://MinigameSuccess/SuccessPanel.tscn" type="PackedScene" id=13]
[ext_resource path="res://ArenaSoftware/SoftwareMinigame/M5X7Font.tres" type="DynamicFont" id=14]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 512, 160 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 11 )
region = Rect2( 512, 0, 512, 160 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 11 )
region = Rect2( 1024, 0, 512, 160 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 11 )
region = Rect2( 1536, 0, 512, 160 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 11 )
region = Rect2( 2048, 0, 512, 160 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 11 )
region = Rect2( 0, 160, 512, 160 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 11 )
region = Rect2( 512, 160, 512, 160 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 11 )
region = Rect2( 1024, 160, 512, 160 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 1536, 160, 512, 160 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 11 )
region = Rect2( 2048, 160, 512, 160 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 2048, 0, 512, 160 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 0, 160, 512, 160 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 512, 160, 512, 160 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 1024, 160, 512, 160 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 11 )
region = Rect2( 1536, 160, 512, 160 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 11 )
region = Rect2( 2048, 160, 512, 160 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "start",
"speed": 10.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "loop",
"speed": 10.0
} ]

[node name="MinigameAero" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Fan" type="AnimatedSprite" parent="."]
position = Vector2( 384, 0 )
frames = SubResource( 17 )
animation = "loop"
centered = false

[node name="WhiteLights" type="Sprite" parent="."]
texture = ExtResource( 7 )
centered = false

[node name="GreenLights" type="Sprite" parent="."]
visible = false
texture = ExtResource( 9 )
centered = false

[node name="RedLights" type="Sprite" parent="."]
visible = false
texture = ExtResource( 8 )
centered = false

[node name="ButtonTest" type="Button" parent="."]
margin_left = 313.364
margin_top = 384.838
margin_right = 402.364
margin_bottom = 438.838
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ButtonTest"]
texture = ExtResource( 10 )
centered = false
offset = Vector2( -20, -15 )

[node name="Label" type="Label" parent="ButtonTest"]
margin_left = -32.0
margin_top = -33.0
margin_right = 127.0
margin_bottom = -7.0
custom_fonts/font = ExtResource( 14 )
text = "Iniciar o teste"

[node name="Center" parent="." instance=ExtResource( 2 )]
position = Vector2( 640, 410 )

[node name="Center_Mass" parent="." instance=ExtResource( 5 )]
position = Vector2( 640.639, 429.921 )

[node name="Center_Lift" parent="." instance=ExtResource( 6 )]
position = Vector2( 592.556, 490.732 )

[node name="Wing" parent="." instance=ExtResource( 4 )]
position = Vector2( 493.561, 578.413 )

[node name="Smoke_Dispenser" parent="." instance=ExtResource( 12 )]
position = Vector2( 640, 181 )

[node name="SuccessPanel" parent="." instance=ExtResource( 13 )]
